Fix issue #7367 - Add overflow ellipsis (#7372)
* Add overflow ellipsis

* Switch to reuse existing might-overflow mixin

* Prevent icon width from shrinking

* Adjust to use spans for might-overflows in general

--- a/frontend/scss/overrides/_icons.scss
+++ b/frontend/scss/overrides/_icons.scss
@@ -1,4 +1,5 @@
 .icon {
+  min-width: 1em;
   width: 1em;
   height: 1em;
   display: inline-block;
